alignment issue

--- a/less/page.less
+++ b/less/page.less
@@ -12,6 +12,7 @@ header {
   background-color: @basecolor;
   color: #FFFFFF;
   h1 {
+    text-align:center;
     font-size: 28px;
     width: 320px;
     margin: 0px auto;
